about me updated

--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
                     <div class="section-inner">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-                            <p>Need to write something about Your passion towards data.</p>
+                            <p>Hello there, I am a graduate student pursuing masters in computer science at university of south florida. </p> 
                             <p>
-                              I am a Software Engineer and Data enthusiast.Currently pursuing MS from University of South Florida and updating my knowledge bank with HTML5, CSS3, Jquery, DataBase and Pyhton.
+                              A data enthusiast and an active developer who is passionate about new technologies. I have undertaken several projects in cutting edge technologies. I have industry exposure and functional understanding of the high-tech Startup ecosystem also skill gained at USF gave me the confidence to compete against the odds.
                             </p>
 
-        <p>It's a good idea to include your personal interests and hobbies as well. Commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec.Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+        <p>Commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec.Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
 
                         </div><!--//content-->
                     </div><!--//section-inner-->
