--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </ul>
             </div><!--//profile-->
             <a class="btn btn-cta-primary pull-right" href="mailto:fatma302@gmail.com?Subject=Hello%20" target="_top">
-              <i class="fa fa-paper-plane"></i> Contact Me</a>
+              <i class="fa fa-paper-plane"></i> Contact Me </a>
         </div><!--//container-->
     </header><!--//header-->
 
@@ -61,7 +61,7 @@
                         <div class="content">
                             <p>Hello there, I am a graduate student pursuing masters in computer science at university of south florida. </p> 
                             <p>
-                              A data enthusiast and an active developer who is passionate about new technologies. I have undertaken several projects in cutting edge technologies. I have industry exposure and functional understanding of the high-tech Startup ecosystem also skill gained at USF gave me the confidence to compete against the odds.
+                              A data enthusiast and an active developer who is passionate about new technologies. I have undertaken several projects using cutting edge technologies. I have industry exposure and functional understanding of the high-tech Startup ecosystem also skill gained at USF gave me the confidence to compete against the odds.
                             </p>
 
         <p>Commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec.Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
@@ -172,16 +172,16 @@
                         <h2 class="heading">Work Experience</h2>
                         <div class="content">
                             <div class="item">
-                                <h3 class="title">Co-Founder & Lead Developer - <span class="place"><a href="#">Startup Hub</a></span> <span class="year">(2014 - Present)</span></h3>
+                                <h3 class="title">Software Engineer, Intern<span class="place"><a href="#">Green Pals LLC</a></span> <span class="year">(2015 - 2015)</span></h3>
                                 <p>Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt.</p>
                             </div><!--//item-->
                             <div class="item">
-                                <h3 class="title">Software Engineer - <span class="place"><a href="#">Google</a></span> <span class="year">(2013 - 2014)</span></h3>
+                                <h3 class="title">Software Engineer, Intern - <span class="place"><a href="#">Jaaga</a></span> <span class="year">(2014 - 2014)</span></h3>
                                 <p>Vivamus a tortor eu turpis pharetra consequat quis non metus. Aliquam aliquam, orci eu suscipit pellentesque, mauris dui tincidunt enim. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna.</p>
                             </div><!--//item-->
 
                             <div class="item">
-                                <h3 class="title">Software Engineer - <span class="place"><a href="#">eBay</a></span> <span class="year">(2012 - 2013)</span></h3>
+                                <h3 class="title">Software Engineer- <span class="place"><a href="#">Nexus TechnoSystems Pvt Ltd</a></span> <span class="year">(2012 - 2013)</span></h3>
                                 <p>Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum.</p>
                             </div><!--//item-->
 
