latest project update

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
 <head>
-    <title>Fatma Zaman | Software Engineer</title>
+    <title>Fatma Zaman | Graduate Student </title>
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -39,7 +39,7 @@
             <img class="profile-image img-responsive pull-left img-circle" src="https://avatars2.githubusercontent.com/u/6854072?v=5&s=180" alt="Fatma Zaman" />
             <div class="profile-content pull-left">
                 <h1 class="name">Fatma Zaman</h1>
-                <h2 class="desc">Software Engineer</h2>
+                <h2 class="desc">Gradaute Student</h2>
                 <ul class="social list-inline">
                     <li><a href="https://twitter.com/Zaman_Fatma" target="_blank"><i class="fa fa-twitter"></i></a></li>
                     <li><a href="https://www.linkedin.com/in/fatmazaman" target="_blank"><i class="fa fa-linkedin"></i></a></li>
@@ -64,8 +64,6 @@
                               A data enthusiast and an active developer who is passionate about new technologies. I have undertaken several projects using cutting edge technologies. I have industry exposure and functional understanding of the high-tech Startup ecosystem also skill gained at USF gave me the confidence to compete against the odds.
                             </p>
 
-        <p>Commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec.Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-
                         </div><!--//content-->
                     </div><!--//section-inner-->
                 </section><!--//section-->
@@ -76,8 +74,9 @@
                         <div class="content">
 
                             <div class="item featured text-center">
-                                <h3 class="title"><a href="#" target="_blank">Cat vs Dog population( need public link here)</a></h3>
-                                <p class="summary">Please explain here what exactly it is</p>
+                                <h3 class="title"><a href="#" target="https://public.tableau.com/profile/publish/Profitability_10/Story1#!/publish-confirm">Visualizing Data with Tableau</a></h3>
+                                <p class="summary">I have used tableau visualization tool to represent profit & loss margin across the globe in supermarkets for furniture, technology and office supplies
+</p>
                                 <div class="featured-image">
                                     <a href="#" target="_blank">
                                     <img class="img-responsive project-image" src="assets/images/projects/project-featured.png" alt="project name" />
