--- a/index.html
+++ b/index.html
@@ -87,10 +87,9 @@
                                     </div>
 
                                 <div class="desc text-left">
-                                    <p>You can promote your main project here. Suspendisse in tellus dolor. Vivamus a tortor eu turpis pharetra consequat quis non metus. Aliquam aliquam, orci eu suscipit pellentesque, mauris dui tincidunt enim, eget iaculis ante dolor non turpis.</p>
-                                    <p>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. At vero eos et accusamus et iusto odio dignissimos ducimus.</p>
+                                    
                                 </div><!--//desc-->
-                                <a class="btn btn-cta-secondary" href="#" target="_blank"><i class="fa fa-thumbs-o-up"></i> Star this project on Github</a>
+                                <a class="btn btn-cta-secondary" href="https://docs.google.com/document/d/1T0IXfO3fk8hcDWwgQQ5oabzQvDGB0eru2R52x5jermU/edit?usp=sharing" target="_blank"><i class="fa fa-thumbs-o-up"></i> Documentation</a>
                             </div><!--//item-->
                             <hr class="divider" />
                             <div class="item row">
@@ -171,7 +170,7 @@
                         <h2 class="heading">Work Experience</h2>
                         <div class="content">
                             <div class="item">
-                                <h3 class="title">Software Engineer, Intern<span class="place"><a href="#">Green Pals LLC</a></span> <span class="year">(2015 - 2015)</span></h3>
+                                <h3 class="title">Software Engineer, Intern - <span class="place"><a href="#">Green Pals LLC</a></span> <span class="year">(2015 - 2015)</span></h3>
                                 <p>Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt.</p>
                             </div><!--//item-->
                             <div class="item">
