--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                         <h2 class="heading sr-only">Basic Information</h2>
                         <div class="content">
                             <ul class="list-unstyled">
-                                <li><i class="fa fa-map-marker"></i><span class="sr-only">Location:</span>Tampa, US</li>
+                                <li><i class="fa fa-map-marker"></i><span class="sr-only">Location:</span>Tampa - Florida, USA</li>
                                 <li><i class="fa fa-envelope-o"></i><span class="sr-only">Email:</span><a href="mailto:fatma302@gmail.com?Subject=Hello%20" target="_top">fatma302@gmail.com</a></li>
                                 <!-- <li><i class="fa fa-link"></i><span class="sr-only">Website:</span><a href="#">http://www.website.com</a></li> -->
                             </ul>
@@ -330,7 +330,8 @@
                         <h2 class="heading">Conferences</h2>
                         <div class="content">
                             <ul class="list-unstyled">
-                                <li><i class="fa fa-calendar"></i> <a href="http://schedule.gracehopper.org/" target="_blank">GHC 2015</a> (Texas)</li>
+                                <li><i class="fa fa-calendar"></i> <a href="http://gracehopper.org/2015-scholars/page/49/" target="_blank">Grace Hopper Conference -
+                                    2015</a></li>
                                 <!-- <li><i class="fa fa-calendar"></i> <a href="http://hive.aigaseattle.org/">Hive</a> (Seattle)</li> -->
                             </ul>
                         </div><!--//content-->
