--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                     </div><!--//section-inner-->
                 </aside><!--//section-->
 
-                <aside class="testimonials aside section">
+               <!-- <aside class="testimonials aside section">
                     <div class="section-inner">
                         <h2 class="heading">Testimonials</h2>
                         <div class="content">
@@ -301,13 +301,13 @@
                                     <p><i class="fa fa-quote-left"></i>Fatma is an excellent data engineer and she is passionate about what she does. You can totally count on her to deliver your projects!</p>
                                 </blockquote>
                                 <p class="source"><span class="name">Abhinay Kumar</span><br /><span class="title">fo0fys</span></p>
-                            </div><!--//item-->
+                            </div>
 
                             <p><a class="more-link" href="https://www.linkedin.com/in/fatmazaman" target="_blank"><i class="fa fa-external-link"></i> More on Linkedin</a></p>
 
-                        </div><!--//content-->
-                    </div><!--//section-inner-->
-                </aside><!--//section-->
+                        </div>
+                    </div>
+                </aside> -->
 
                 <aside class="education aside section">
                     <div class="section-inner">
@@ -355,13 +355,13 @@
 
                 <aside class="list music aside section">
                     <div class="section-inner">
-                        <h2 class="heading">Favourite coding music</h2>
+                        <h2 class="heading">Favourite Websites </h2>
                         <div class="content">
                             <ul class="list-unstyled">
-                                <li><i class="fa fa-headphones"></i> <a href="#">Etiam hendrerit urna nunc</a></li>
-                                <li><i class="fa fa-headphones"></i> <a href="#">Ut sollicitudin in mauris non auctor</a></li>
-                                <li><i class="fa fa-headphones"></i> <a href="#">Etiam hendrerit urna nunc</a></li>
-                                <li><i class="fa fa-headphones"></i> <a href="#">Duis et felis bibendum</a></li>
+                                <li><i class="fa fa-headphones"></i> <a href="https://www.codecademy.com/fatmazaman">Codecademy</a></li>
+                                <li><i class="fa fa-headphones"></i> <a href="https://www.coursera.org/user/i/91d5ae0d942f51d4c0626574617f214f">Coursera</a></li>
+                                <li><i class="fa fa-headphones"></i> <a href="https://www.codeschool.com/users/fatmazaman">Code School</a></li>
+                                <li><i class="fa fa-headphones"></i> <a href="https://www.youracclaim.com/badges/2f154047-2200-49ab-8bb4-e3fef15652f2">IBM Explorer</a></li>
                             </ul>
                         </div><!--//content-->
                     </div><!--//section-inner-->
