--- a/index.html
+++ b/index.html
@@ -358,10 +358,10 @@
                         <h2 class="heading">Favourite Websites </h2>
                         <div class="content">
                             <ul class="list-unstyled">
-                                <li><i class="fa fa-headphones"></i> <a href="https://www.codecademy.com/fatmazaman">Codecademy</a></li>
-                                <li><i class="fa fa-headphones"></i> <a href="https://www.coursera.org/user/i/91d5ae0d942f51d4c0626574617f214f">Coursera</a></li>
-                                <li><i class="fa fa-headphones"></i> <a href="https://www.codeschool.com/users/fatmazaman">Code School</a></li>
-                                <li><i class="fa fa-headphones"></i> <a href="https://www.youracclaim.com/badges/2f154047-2200-49ab-8bb4-e3fef15652f2">IBM Explorer</a></li>
+                                <li><i class="fa fa-code"></i> <a href="https://www.codecademy.com/fatmazaman">Codecademy</a></li>
+                                <li><i class="fa fa-code"></i><a href="https://www.coursera.org/user/i/91d5ae0d942f51d4c0626574617f214f">Coursera</a></li>
+                                <li><i class="fa fa-code"></i><a href="https://www.codeschool.com/users/fatmazaman">Code School</a></li>
+                                <li><i class="fa fa-code"></i> <a href="https://www.youracclaim.com/badges/2f154047-2200-49ab-8bb4-e3fef15652f2">IBM Explorer</a></li>
                             </ul>
                         </div><!--//content-->
                     </div><!--//section-inner-->
