Heading was wrong

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <img class="profile-image img-responsive pull-left img-circle" src="https://avatars2.githubusercontent.com/u/6854072?v=5&s=180" alt="Fatma Zaman" />
             <div class="profile-content pull-left">
                 <h1 class="name">Fatma Zaman</h1>
-                <h2 class="desc">Gradaute Student</h2>
+                <h2 class="desc">Graduate Student</h2>
                 <ul class="social list-inline">
                     <li><a href="https://twitter.com/Zaman_Fatma" target="_blank"><i class="fa fa-twitter"></i></a></li>
                     <li><a href="https://www.linkedin.com/in/fatmazaman" target="_blank"><i class="fa fa-linkedin"></i></a></li>
