--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
                     <div class="section-inner">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-                            <p>Hello there, I am a graduate student pursuing masters in computer science at university of south florida. </p>
+                            <p>Hello there, I am a graduate student pursuing Master's in Computer Science at the University of South Florida. </p>
                             <p>
-                              A data enthusiast and an active developer who is passionate about new technologies. I have undertaken several projects using cutting edge technologies. I have industry exposure and functional understanding of the high-tech Startup ecosystem also skill gained at USF gave me the confidence to compete against the odds.
+                              A data enthusiast and an active developer who is passionate about new technologies. I have undertaken several projects using cutting-edge technologies. I have industry exposure and functional understanding of the high-tech startup ecosystem, also, skills gained at USF gave me the confidence to compete against the odds.
                             </p>
 
                         </div><!--//content-->
@@ -135,7 +135,7 @@
                                 </a>
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
                                     <h3 class="title"><a href="https://github.com/fatmazaman/Secret_Message" target="_blank">Secret Message</a></h3>
-                                    <p> This is puzzle game i build using my learning from MOOC, in this games you have to get the message which is the solution to the puzzle by renaming all the files by removing the numbers from the photo name, the photos will reveal a secret message.</p>
+                                    <p> This is a puzzle game I built using my learning from MOOC. In this game, you have to decrypt the message by renaming all the files and removing the numbers from the photo name, the photos will reveal a secret message.</p>
                                     <p><a class="more-link" href="https://github.com/fatmazaman/Secret_Message" target="_blank"><i class="fa fa-external-link"></i> View on GitHub</a></p>
                                 </div><!--//desc-->
                             </div><!--//item-->
@@ -150,7 +150,7 @@
                         <div class="content">
                             <div class="item">
                                 <h3 class="title"><a href="https://github.com/WICSE-USF/WICSE-USF.github.io" target="_blank">WICSE@USF</a> <span class="label label-theme">Open Source</span></h3>
-                                <p class="summary">As a Volunteer, Contributed to Build a static website for Women In Computer Science at USF.</p>
+                                <p class="summary">As a Volunteer, contributed to build a static website for Women In Computer Science at USF.</p>
                                 <p><a class="more-link" href="https://github.com/WICSE-USF/WICSE-USF.github.io" target="_blank"><i class="fa fa-external-link"></i> View on GitHub</a></p>
                             </div><!--//item-->
                             <div class="item">
@@ -159,7 +159,7 @@
                                   symbolic mathematical problems consisting simple or complex calculations. Use of Java
                                   programming on RAD platform provides an efficient method to such calculations. The GUI is
                                   made in such a way that it takes input in a typical mathematical format. Our main goal is to
-                                  provide a strong yet a simple way to solve mathematical problems.
+                                  provide a strong, yet a simple way to solve mathematical problems.
                                 </p>
                                 <p>
                                   Technologies used: SEMAT 2.1, IBM RAD 7.2, Softany WinCHM Pro 3.
@@ -186,7 +186,7 @@
                             <div class="item">
                                 <h3 class="title">Software Engineer, Intern - <span class="place">Green Pals LLC</span> <span class="year">(May 2015 - Aug 2015)</span></h3>
                                 <ul>
-                                  <li>Designed the entire front-end of company website, collaborated with developers and projects managers to introduce new functionality across the PHP website as well as Wordpress blog</li>
+                                  <li>Designed the entire front-end of company website, collaborated with developers and project managers to introduce new functionality across the PHP website as well as Wordpress blog</li>
                                   <li>Built a mobile friendly responsive website using Bootstrap framework</li>
                                 </ul>
                             </div><!--//item-->
