--- a/index.html
+++ b/index.html
@@ -274,9 +274,9 @@
                                 </div><!--//item-->
 
                                 <div class="item">
-                                    <h3 class="level-title">Data Engineering<span class="level-label">Pro</span></h3>
+                                    <h3 class="level-title">Data Engineering<span class="level-label">Beginner</span></h3>
                                     <div class="level-bar">
-                                        <div class="level-bar-inner" data-level="80%">
+                                        <div class="level-bar-inner" data-level="40%">
                                         </div>
                                     </div><!--//level-bar-->
                                 </div><!--//item-->
