--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
 <head>
-    <title>Fatma Zaman | Graduate Student </title>
+    <title> Fatma Zaman | Software Developer </title>
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Fatma Zaman, Data Enthusiast and Python Developer.">
+    <meta name="description" content="Fatma Zaman, An Active and Enthusiastic Developer.">
     <meta name="author" content="Fatma Zaman">
     <!-- <link rel="shortcut icon" href="favicon.ico">   -->
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,300italic,400italic' rel='stylesheet' type='text/css'>
@@ -44,7 +44,7 @@
             <img class="profile-image img-responsive pull-left img-circle" src="https://avatars2.githubusercontent.com/u/6854072?v=5&s=180" alt="Fatma Zaman" />
             <div class="profile-content pull-left">
                 <h1 class="name">Fatma Zaman</h1>
-                <h2 class="desc">Graduate Student</h2>
+                <h2 class="desc">Software Developer</h2>
                 <ul class="social list-inline">
                     <li><a href="https://twitter.com/Zaman_Fatma" target="_blank"><i class="fa fa-twitter"></i></a></li>
                     <li><a href="https://www.linkedin.com/in/fatmazaman" target="_blank"><i class="fa fa-linkedin"></i></a></li>
@@ -64,7 +64,7 @@
                     <div class="section-inner">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-                            <p>Hello there, I am Fatma Zaman, recently graduated from University of South Florida with master degree in computer science.</p>
+                            <p>Software developer with professional experience, bachelor's and Master’s graduate in Computer Science. Experienced in the areas of software and web application development. Possessing strong analytical and problem solving skills. Ambitious, hardworking with good team skills and ability to manage time effectively</p>
                             <p>
                               I have 2.3 years of industry exposure and functional understanding of high tech startup ecosystem, also, skills gained at USF gave me the confidence to compete against the odds. I'm an active developer who is passionate about new technology.I have undertaken several projects using cutting-edge technologies.
                             </p>
