--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
                     <div class="section-inner">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-                            <p>Software developer with professional experience, bachelor's and Master’s graduate in Computer Science. Experienced in the areas of software and web application development. Possessing strong analytical and problem solving skills. Ambitious, hardworking with good team skills and ability to manage time effectively</p>
+                            <p>Software developer with professional experience, bachelor's and Master’s graduate in Computer Science. Experienced in the areas of software and web application development. Possessing strong analytical and problem solving skills. Ambitious, hardworking with good team skills and ability to manage time effectively.</p>
                             <p>
-                              I have 2.3 years of industry exposure and functional understanding of high tech startup ecosystem, also, skills gained at USF gave me the confidence to compete against the odds. I'm an active developer who is passionate about new technology.I have undertaken several projects using cutting-edge technologies.
+                              I have industry exposure and functional understanding of high tech startup ecosystem, also, skills gained at work gave me the confidence to compete against the odds. I'm an active developer who is passionate about new technology.I have undertaken several projects using cutting-edge technologies.
                             </p>
 
                         </div><!--//content-->
