--- a/index.html
+++ b/index.html
@@ -183,14 +183,15 @@
                         <h2 class="heading">Work Experience</h2>
                         <div class="content">
                             <div class="item">
-                                <h3 class="title">Software Engineer, Intern - <span class="place">Green Pals LLC</span> <span class="year">(May 2015 - Aug 2015)</span></h3>
+                                <h3 class="title">Software Engineer, Intern - <span class="place">Green Pals LLC</span> <span class="year">(May 2015 - Dec 2015)</span></h3>
                                 <ul>
-                                  <li>Designed the entire front-end of company website, collaborated with developers and project managers to introduce new functionality across the PHP website as well as Wordpress blog</li>
-                                  <li>Built a mobile friendly responsive website using Bootstrap framework</li>
+                                  <li>Designed and Developed the presentation layer with responsive web design experience in Bootstrap, Angulat JS Javascript, HTML ,CSS and JQueary</li>
+                                  <li> Built responsive site using Bootstrap that firs devices of different visual sizes, Used Angular JS for data-binding and Node JS for back-end support with APIs</li>
+                                  <li>Made Ajax calls using backbone.js for getting the data and parsing it for showing on the web page</li>
                                 </ul>
                             </div><!--//item-->
                             <div class="item">
-                                <h3 class="title">Software Engineer- <span class="place">Levvo Software Technology, India</span> <span class="year">(Aug 2012 - July 2014)</span></h3>
+                                <h3 class="title">Software Engineer- <span class="place">Levvo Software Technology, India</span> <span class="year">(Aug 2010 - July 2014)</span></h3>
                                 <ul>
                                   <li>
                                     Project:  MMR (My Medical Records)
