--- a/index.html
+++ b/index.html
@@ -185,37 +185,21 @@
                             <div class="item">
                                 <h3 class="title">Software Engineer, Intern - <span class="place">Green Pals LLC</span> <span class="year">(May 2015 - Dec 2015)</span></h3>
                                 <ul>
-                                  <li>Designed and Developed the presentation layer with responsive web design experience in Bootstrap, Angulat JS Javascript, HTML ,CSS and JQueary</li>
+                                  <li> Designed and Developed the presentation layer with responsive web design experience in Bootstrap, Angulat JS Javascript, HTML ,CSS and JQueary</li>
                                   <li> Built responsive site using Bootstrap that firs devices of different visual sizes, Used Angular JS for data-binding and Node JS for back-end support with APIs</li>
-                                  <li>Made Ajax calls using backbone.js for getting the data and parsing it for showing on the web page</li>
+                                  <li> Made Ajax calls using backbone.js for getting the data and parsing it for showing on the web page</li>
                                 </ul>
                             </div><!--//item-->
                             <div class="item">
                                 <h3 class="title">Software Engineer- <span class="place">Levvo Software Technology, India</span> <span class="year">(Aug 2010 - July 2014)</span></h3>
                                 <ul>
-                                  <li>
-                                    Project:  MMR (My Medical Records)
-                                    <ul>
-                                      <li>Web page development, client side validation using java script</li>
-                                      <li>Implemented the JSP to design the user-friendly front-end screens</li>
-                                      <li>Involved in developing Command classes coding</li>
-                                      <li>Involved in Database Connectivity through Hibernate</li>
-                                      <li>Coding and Unit testing of the modules</li>
-                                      <li>Worked on Developing MVC Architecture components</li>
-                                      <li>Worked on Developing Hibernate Mapping files</li>
-                                    </ul>
-                                  </li>
-                                  <li>
-                                    Project: PickRooms
-                                    <ul>
-                                      <li>Understanding user requirements and system specifications</li>
-                                      <li>Implemented the JSP to design the user-friendly front-end screens</li>
-                                      <li>Involved in unit testing, developing build environment</li>
-                                      <li>Worked on Developing Struts Action classes and JSP Pages</li>
-                                      <li>Involving in developing code for database interaction using Hibernate</li>
-                                      <li>Developed pojo classes for hibernate</li>
-                                    </ul>
-                                  </li>
+                                    <li>Analyze all business processes and ensure compliance to all controlled processes according to business flow and requirement</li>
+                                    <li>Integrated Struts with Spring by delegating Struts action management to Spring using proxy and Used Spring framework for dependency injection</li>
+                                    <li>Hibernate framework used in persistence layer for mapping an object oriented domain model to a relational database(oracle)</li>
+                                    <li>Implemented various design patterns in the project such as Business Delegate, Data Transfer Object, Data access Object, Service Locator and Singleton</li>
+                                    <li>Consumed Web Services (RESTful) from third party to send the email in bulk. This service is used to send the email to the customers in bulk as part of batch </li>
+                                    <li>Developed persistence layer modules using EJB Java Persistence API( JPA) annotations and Entitymanager</li>
+                                    <li>Used Eclipse IDE and utilized git for source code repository management, creating views and performing code delivery, code labeling and code merging</li>
                                 </ul>
                             </div><!--//item-->
 
