--- a/index.html
+++ b/index.html
@@ -313,11 +313,11 @@
                         <div class="content">
                             <div class="item">
                                 <h3 class="title"><i class="fa fa-graduation-cap"></i> MS Computer Science</h3>
-                                <h4 class="university">University of South Florida <span class="year">(2014-2016)</span></h4>
+                                <h4 class="university">University of South Florida <span class="year"></span></h4>
                             </div><!--//item-->
                             <div class="item">
                                 <h3 class="title"><i class="fa fa-graduation-cap"></i> B.Tech Computer Science</h3>
-                                <h4 class="university">National Institute of Science and Technology <span class="year">(2008-2012)</span></h4>
+                                <h4 class="university">National Institute of Science and Technology <span class="year"></span></h4>
                             </div><!--//item-->
                         </div><!--//content-->
                     </div><!--//section-inner-->
