--- a/index.html
+++ b/index.html
@@ -312,11 +312,11 @@
                         <h2 class="heading">Education</h2>
                         <div class="content">
                             <div class="item">
-                                <h3 class="title"><i class="fa fa-graduation-cap"></i> MS Computer Science</h3>
+                                <h3 class="title"><i class="fa fa-graduation-cap"></i> Master in Computer Science</h3>
                                 <h4 class="university">University of South Florida <span class="year"></span></h4>
                             </div><!--//item-->
                             <div class="item">
-                                <h3 class="title"><i class="fa fa-graduation-cap"></i> B.Tech Computer Science</h3>
+                                <h3 class="title"><i class="fa fa-graduation-cap"></i> Bachelor in Computer Science</h3>
                                 <h4 class="university">National Institute of Science and Technology <span class="year"></span></h4>
                             </div><!--//item-->
                         </div><!--//content-->
