--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                         <h2 class="heading">Work Experience</h2>
                         <div class="content">
                             <div class="item">
-                                <h3 class="title">Software Engineer, Intern - <span class="place">Green Pals LLC</span> <span class="year">(May 2015 - Dec 2015)</span></h3>
+                                <h3 class="title">Software Engineer, Intern - <span class="place">Green Pals LLC</span> <span class="year"></span></h3>
                                 <ul>
                                   <li> Designed and Developed the presentation layer with responsive web design experience in Bootstrap, Angulat JS Javascript, HTML ,CSS and JQueary</li>
                                   <li> Built responsive site using Bootstrap that firs devices of different visual sizes, Used Angular JS for data-binding and Node JS for back-end support with APIs</li>
@@ -191,7 +191,7 @@
                                 </ul>
                             </div><!--//item-->
                             <div class="item">
-                                <h3 class="title">Software Engineer- <span class="place">Levvo Software Technology, India</span> <span class="year">(Aug 2010 - July 2014)</span></h3>
+                                <h3 class="title">Software Engineer- <span class="place">Levvo Software Technology, India</span> <span class="year"></span></h3>
                                 <ul>
                                     <li>Analyze all business processes and ensure compliance to all controlled processes according to business flow and requirement</li>
                                     <li>Integrated Struts with Spring by delegating Struts action management to Spring using proxy and Used Spring framework for dependency injection</li>
