--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                         <h2 class="heading sr-only">Basic Information</h2>
                         <div class="content">
                             <ul class="list-unstyled">
-                                <li><i class="fa fa-map-marker"></i><span class="sr-only">Location:</span>San Jose - California, USA</li>
+                                <li><i class="fa fa-map-marker"></i><span class="sr-only">Location:</span>Tampa - Florida, USA</li>
                                 <li><i class="fa fa-envelope-o"></i><span class="sr-only">Email:</span><a href="mailto:fatma302@gmail.com?Subject=Hello%20" target="_top">fatma302@gmail.com</a></li>
                                 <!-- <li><i class="fa fa-link"></i><span class="sr-only">Website:</span><a href="#">http://www.website.com</a></li> -->
                             </ul>
